chore: finalize project for independent review
- Improve JNI logging robustness with exception handling and async-free thread
- Consolidate documentation into DEVELOPMENT.md and README.md
- Update Java requirements (JDK 11 verified on Dataproc 2.3)
- Clean up workspace and remove redundant eprintln calls